--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+	<meta property="og:url" content="https://jarkyn-ui.kz/">
+	<meta property="og:site_name" content="JarkynUI">
+	<meta property="og:title" content="«JarkynUI» предоставляет услуги ремонта квартир">
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta property="og:description" content="«JarkynUI» предоставляет услуги ремонта квартир, Посчитайте примерную стоимость ремонта прямо на сайте в нашем Калькуляторе">
+    
+    <meta property="og:image" content="https://jarkyn-ui.kz/images/icons/logonobg2.png">
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
@@ -24,7 +31,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>«JarkynUI» предоставляет услуги ремонта квартир</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
